docs: 更新项目文档和代码翻译
1. 将项目3受迫单摆和项目1 Lotka-Volterra的中文文档中的数学公式转换为LaTeX格式
2. 删除项目6轴承轨道相关的文档和代码文件
3. 将多个项目解决方案中的中文注释和标签翻译为英文
4. 重命名项目1的学生模板文件和解决方案文件

主要修改包括：
- 规范化数学公式的表示方式
- 移除已废弃的项目6相关文件
- 统一代码中的英文术语
- 整理文件命名规范

--- a/project_3_forced_pendulum/项目说明.md
+++ b/project_3_forced_pendulum/项目说明.md
@@ -10,26 +10,26 @@
 
 考虑受到周期外力驱动和阻尼作用的单摆，其运动方程为：
 
-```
-d²θ/dt² + γ(dθ/dt) + ω₀²sin(θ) = f₀cos(ωt)
-```
+$$d^2\theta/dt² + \gamma(d\theta/dt) + \omega_0^2\sin(\theta) = f_0\cos(\omega t)$$
+
 
 其中：
-- θ：摆角（弧度）
-- γ：阻尼系数
-- ω₀：固有频率 (ω₀ = √(g/L))
-- f₀：驱动力幅度
-- ω：驱动频率
-- t：时间
+-  $\theta$：摆角（弧度）
+-  $\gamma$：阻尼系数
+-  $\omega_0$：固有频率 ( $\omega_0 =\sqrt{g/L}$)
+-  $f_0$：驱动力幅度
+-  $\omega$：驱动频率
+-  $t$：时间
 
 ### 状态空间表示
 
 将二阶微分方程转化为一阶方程组：
 
-```
-dθ/dt = ω_θ
-dω_θ/dt = -γω_θ - ω₀²sin(θ) + f₀cos(ωt)
-```
+$$\begin{align*}
+d\theta/dt=\omega_θ\\
+dω_θ/dt=-\omega_0^2\sin(\theta) + f_0\cos(\omega t)
+\end{align*}$$
+
 
 状态向量：**y** = [θ, ω_θ]ᵀ
 
