feat: 添加洛伦兹方程项目模板和解决方案
docs: 更新项目说明文档，简化内容并优化格式
test: 添加洛伦兹方程测试用例
refactor: 重构受迫单摆项目代码结构，拆分测试文件

- 新增洛伦兹方程学生模板和参考答案实现
- 简化项目说明文档，移除冗余内容，聚焦核心任务
- 添加完整的测试用例覆盖主要功能
- 重构受迫单摆项目结构，将测试文件拆分为独立模块
- 修复文档中的格式问题和错别字

--- a/project_2_lorenz_equations/实验报告模板.md
+++ b/project_2_lorenz_equations/实验报告模板.md
@@ -12,16 +12,14 @@
 ### 1.1 主要目标
 - [ ] 掌握洛伦兹方程组的数值求解方法
 - [ ] 理解确定性混沌的基本概念和特征
-- [ ] 分析奇异吸引子的几何结构
-- [ ] 研究系统对初始条件的敏感依赖性
-- [ ] 比较不同数值方法在混沌系统中的表现
+- [ ] 分析洛伦兹吸引子的几何结构
+- [ ] 研究系统对初始条件的敏感依赖性（蝴蝶效应）
 
 ### 1.2 学习要点
 - 洛伦兹方程的物理背景和数学形式
-- 混沌系统的基本特征：敏感依赖性、非周期性、有界性
-- 李雅普诺夫指数的概念和计算
+- 混沌系统的基本特征
 - 奇异吸引子的可视化方法
-- 数值方法在长时间积分中的稳定性
+- 数值积分方法在混沌系统中的应用
 
 ---
 
@@ -30,265 +28,64 @@
 ### 2.1 洛伦兹方程组
 
 **方程形式：**
-```
 dx/dt = σ(y - x)
 dy/dt = rx - y - xz  
 dz/dt = xy - bz
-```
 
-**参数说明：**
-- σ (sigma)：普朗特数，通常取10
-- r：瑞利数，控制系统行为的关键参数
-- b：几何因子，通常取8/3
 
-**物理意义：**
-[请简述洛伦兹方程的物理背景，如大气对流模型等]
+**标准参数：**
+- σ = 10.0
+- r = 28.0
+- b = 8/3
 
-### 2.2 混沌理论基础
-
-**混沌的定义：**
-[请描述确定性混沌的基本概念]
-
-**混沌的特征：**
-1. **敏感依赖性：** [说明初始条件的微小变化如何导致长期行为的巨大差异]
-2. **非周期性：** [解释轨道的非重复性质]
-3. **有界性：** [说明轨道在有限区域内运动]
-
-**李雅普诺夫指数：**
-[解释李雅普诺夫指数的定义和物理意义]
+**初始条件：**
+- 基准条件：(0.1, 0.1, 0.1)
+- 扰动条件：(0.10001, 0.1, 0.1)
 
 ---
 
-## 3. 数值方法
+## 3. 实验内容与结果
 
-### 3.1 方法实现
+### 3.1 洛伦兹吸引子可视化
 
-**欧拉法：**
-```
-y_{n+1} = y_n + h·f(t_n, y_n)
-```
-
-**改进欧拉法：**
-```
-k1 = f(t_n, y_n)
-k2 = f(t_n + h, y_n + h·k1)
-y_{n+1} = y_n + h/2·(k1 + k2)
-```
-
-**4阶龙格-库塔法：**
-```
-k1 = f(t_n, y_n)
-k2 = f(t_n + h/2, y_n + h/2·k1)
-k3 = f(t_n + h/2, y_n + h/2·k2)
-k4 = f(t_n + h, y_n + h·k3)
-y_{n+1} = y_n + h/6·(k1 + 2k2 + 2k3 + k4)
-```
-
-### 3.2 方法特点分析
-
-| 方法 | 精度阶 | 计算复杂度 | 稳定性 | 适用性 |
-|------|--------|------------|--------|---------|
-| 欧拉法 | [填写] | [填写] | [填写] | [填写] |
-| 改进欧拉法 | [填写] | [填写] | [填写] | [填写] |
-| RK4 | [填写] | [填写] | [填写] | [填写] |
-
----
-
-## 4. 实验结果
-
-### 4.1 基本求解结果
-
-**实验参数：**
-- σ = 10.0, r = 28.0, b = 8/3
-- 初始条件：(x₀, y₀, z₀) = (0.0, 1.0, 0.0)
+**实现方法：**
+- 使用`scipy.integrate.solve_ivp`的RK45方法求解
 - 时间范围：t ∈ [0, 50]
-- 时间步长：dt = 0.001
+- 时间步长：dt = 0.01
 
-**时间序列图：**
-[插入时间序列图，显示x(t), y(t), z(t)的演化]
+**3D轨迹图：**
+[请在此处插入洛伦兹吸引子的3D图]
 
 **观察结果：**
-- x分量的行为特征：[描述]
-- y分量的行为特征：[描述]
-- z分量的行为特征：[描述]
-- 系统的整体动力学特征：[描述]
+- 描述吸引子的形状特征
+- 分析轨道的分布特点
 
-### 4.2 奇异吸引子可视化
+### 3.2 初始条件敏感性分析
 
-**3D轨道图：**
-[插入洛伦兹奇异吸引子的3D图]
+**比较结果：**
+[请在此处插入x(t)的对比图]
 
-**投影图：**
-[插入XY、XZ、YZ平面的投影图]
+**轨道距离演化：**
+[请在此处插入距离随时间变化图]
 
-**几何特征分析：**
-- 吸引子的整体形状：[描述蝴蝶形状等特征]
-- 轨道的分布特点：[描述密度分布]
-- 对称性分析：[分析系统的对称性]
-
-### 4.3 数值方法比较
-
-**比较条件：**
-- 相同的初始条件和参数
-- 相同的时间步长
-- 积分时间：t ∈ [0, 20]
-
-**比较图：**
-[插入三种方法的时间序列比较图]
-[插入三种方法的相空间轨道比较图]
-
-**精度分析：**
-
-| 时间点 | 欧拉法误差 | 改进欧拉法误差 | RK4误差 |
-|--------|------------|----------------|----------|
-| t=5 | [填写] | [填写] | [填写] |
-| t=10 | [填写] | [填写] | [填写] |
-| t=15 | [填写] | [填写] | [填写] |
-| t=20 | [填写] | [填写] | [填写] |
-
-**稳定性分析：**
-[分析不同方法在长时间积分中的表现]
-
-### 4.4 混沌行为分析
-
-**敏感依赖性实验：**
-- 基准初始条件：(0.0, 1.0, 0.0)
-- 扰动初始条件：(0.0, 1.0, 1e-8)
-- 扰动大小：δ = 1×10⁻⁸
-
-**轨道分离图：**
-[插入两条轨道的比较图]
-
-**距离演化图：**
-[插入轨道间距离随时间的演化图（对数尺度）]
-
-**李雅普诺夫指数估算：**
-- 计算方法：[描述计算过程]
-- 估算结果：λ ≈ [填写数值]
-- 物理意义：[解释正的李雅普诺夫指数的含义]
-
-### 4.5 参数空间探索
-
-**不同r值的系统行为：**
-
-| r值 | 系统行为 | 特征描述 |
-|-----|----------|----------|
-| r < 1 | [填写] | [描述] |
-| 1 < r < 24.74 | [填写] | [描述] |
-| r > 24.74 | [填写] | [描述] |
-| r = 28 | [填写] | [描述] |
-
-**相空间轨道变化：**
-[插入不同r值下的相空间图]
-
-**分岔现象：**
-[描述从周期到混沌的转变过程]
+**分析：**
+- 两条轨迹何时开始显著分离
+- 分离速率与混沌特性的关系
 
 ---
 
-## 5. 结果分析与讨论
+## 4. 讨论与结论
 
-### 5.1 数值方法性能分析
+### 4.1 主要发现
+- 总结洛伦兹系统的混沌特性
+- 分析数值方法的适用性
 
-**精度比较：**
-[分析三种方法的精度差异及其原因]
-
-**计算效率：**
-[比较计算时间和资源消耗]
-
-**长期稳定性：**
-[讨论在混沌系统中的长期行为]
-
-### 5.2 混沌特征验证
-
-**敏感依赖性：**
-[分析实验结果如何验证敏感依赖性]
-
-**非周期性：**
-[讨论轨道的非重复特征]
-
-**有界性：**
-[分析吸引子的有界特征]
-
-### 5.3 物理意义讨论
-
-**大气对流模型：**
-[联系洛伦兹方程的物理背景]
-
-**混沌在自然界中的意义：**
-[讨论确定性混沌的普遍性]
-
-### 5.4 数值计算的局限性
-
-**舍入误差影响：**
-[分析计算精度对结果的影响]
-
-**步长选择：**
-[讨论时间步长对结果的影响]
-
-**长期预测的不可能性：**
-[解释混沌系统长期预测的困难]
+### 4.2 实验心得
+[请填写您的实验体会和收获]
 
 ---
 
-## 6. 误差分析
+## 5. 附录：核心代码片段
 
-### 6.1 数值误差来源
-
-1. **截断误差：** [分析方法本身的理论误差]
-2. **舍入误差：** [分析计算机精度的影响]
-3. **累积误差：** [分析长时间积分的误差积累]
-
-### 6.2 误差控制策略
-
-- **步长选择原则：** [讨论如何选择合适的步长]
-- **精度要求：** [分析不同应用的精度需求]
-- **误差监控：** [描述误差监控方法]
-
----
-
-## 7. 结论
-
-### 7.1 主要发现
-
-1. **数值方法比较：** [总结三种方法的优缺点]
-2. **混沌特征：** [总结观察到的混沌现象]
-3. **参数影响：** [总结参数对系统行为的影响]
-
-### 7.2 实验收获
-
-- **理论理解：** [描述对混沌理论的理解]
-- **数值技能：** [总结掌握的数值方法]
-- **编程能力：** [总结编程技能的提升]
-
-### 7.3 进一步研究方向
-
-- [提出可能的扩展研究方向]
-- [讨论其他混沌系统的研究]
-- [考虑实际应用的可能性]
-
----
-
-## 8. 参考文献
-
-1. Lorenz, E. N. (1963). Deterministic nonperiodic flow. Journal of Atmospheric Sciences, 20(2), 130-141.
-2. Strogatz, S. H. (2014). Nonlinear dynamics and chaos: with applications to physics, biology, chemistry, and engineering.
-3. [添加其他相关参考文献]
-
----
-
-## 9. 附录
-
-### 9.1 完整代码
-[如需要，可以附上完整的实现代码]
-
-### 9.2 详细数据
-[如需要，可以附上详细的数值数据]
-
-### 9.3 额外图表
-[如需要，可以附上额外的分析图表]
-
----
-
-**实验报告完成日期：** [填写日期]  
-**总结：** [用1-2段话总结整个实验的收获和体会]
+```python
+```
