--- a/project_2_lorenz_equations/项目说明.md
+++ b/project_2_lorenz_equations/项目说明.md
@@ -1,148 +1,52 @@
-# 项目2：洛伦兹方程与确定性混沌
 
-## 项目介绍
+**项目2：洛伦兹吸引子与混沌初探**
 
-洛伦兹方程是物理学中最著名的微分方程组之一，由气象学家Edward Lorenz在1963年研究天气变化的简化模型时提出。这组方程是**确定性混沌**的第一个无可争议的例子，尽管方程本身是完全确定的（没有随机性），但却能产生看似随机的复杂运动。
+**1. 背景简介**
 
-洛伦兹方程揭示了非线性动力学系统中的重要现象：
-- 对初始条件的敏感依赖性（"蝴蝶效应"）
-- 奇异吸引子的存在
-- 确定性系统中的混沌行为
+洛伦兹方程是一组著名的微分方程，最初用于模拟简化的天气系统。它展示了即使是完全确定的简单方程组，也能产生极其复杂且看似随机的行为，这种现象被称为“确定性混沌”。本项目旨在通过数值求解和可视化，初步探索洛伦兹系统的混沌特性，特别是著名的“蝴蝶效应”（对初始条件的敏感依赖性）和奇异吸引子。
 
-本项目将帮助学生：
-- 理解非线性动力学系统的基本概念
-- 掌握混沌系统的数值求解方法
-- 学习分析系统对初始条件的敏感性
-- 观察和理解奇异吸引子现象
-- 比较不同数值方法在混沌系统中的表现
+**2. 核心方程**
 
-## 项目任务
-
-### 任务1：实现洛伦兹方程组求解
-
-实现函数 `solve_lorenz_equations(sigma, r, b, x0, y0, z0, t_span, dt)`，求解洛伦兹方程组：
+你需要求解以下洛伦兹方程组：
 
 $$\frac{dx}{dt} = \sigma(y-x)$$
 $$\frac{dy}{dt} = rx - y - xz$$
 $$\frac{dz}{dt} = xy - bz$$
 
-**输入参数：**
-- `sigma`, `r`, `b`: 洛伦兹方程参数
-- `x0`, `y0`, `z0`: 初始条件
-- `t_span`: 时间范围 (t_start, t_end)
-- `dt`: 时间步长
+**3. 主要任务与步骤**
 
-**输出：**
-- `t`: 时间数组
-- `x`, `y`, `z`: 三个状态变量随时间变化的数组
+*   **任务 A: 实现洛伦兹系统求解器**
+    1.  编写一个Python函数，该函数定义了洛伦兹方程组（即计算 $dx/dt, dy/dt, dz/dt$）。
+    2.  使用 `scipy.integrate.solve_ivp` (推荐使用 `method='RK45'` 或 `'LSODA'`) 来求解该方程组。
+        *   **标准参数：** $\sigma=10$, $r=28$, $b=\frac{8}{3}$。
+        *   **初始条件 1 (IC1)：** $(x_0, y_0, z_0) = (0.1, 0.1, 0.1)$ (避免从原点开始，原点是不稳定平衡点)。
+        *   **时间设置：** 积分时间从 $t=0$ 到 $t=50$，输出结果的时间点可以密集一些以便绘图 (例如，`t_eval = np.linspace(0, 50, 5000)`)。
+    3.  获取数值解 $x(t), y(t), z(t)$。
 
-### 任务2：数值方法比较与稳定性分析
+*   **任务 B: 可视化洛伦兹吸引子**
+    1.  使用 `matplotlib` 的3D绘图功能 (`mpl_toolkits.mplot3d`)，将任务A中得到的解 $(x(t), y(t), z(t))$ 绘制成三维空间中的轨迹图。观察其经典的“蝴蝶”形状。
+    2.  **(可选)** 绘制 $x$ vs. $y$, $x$ vs. $z$, $y$ vs. $z$ 平面的二维投影图。
 
-实现函数 `compare_methods_lorenz(sigma, r, b, x0, y0, z0, t_span, dt)`，比较三种数值方法在混沌系统中的表现：
-- 欧拉法
-- 改进欧拉法
-- 4阶龙格-库塔法
+*   **任务 C: 探究初始条件的敏感性 (“蝴蝶效应”)**
+    1.  选择一个新的初始条件 **IC2**，使其与任务A中的 **IC1** 有一个微小的差异。例如：
+        *   **IC2:** $(x_0', y_0', z_0') = (0.10001, 0.1, 0.1)$ (仅 $x_0$ 有微小改变)。
+    2.  使用与任务A相同的参数和时间设置，求解从 IC2 出发的洛伦兹方程。
+    3.  绘制两组解中某个分量（例如 $x(t)$ 和 $x'(t)$）随时间变化的对比图。观察两条曲线何时开始显著分离。
+    4.  **(可选)** 计算并绘制两条轨迹在相空间中的距离随时间的变化。
+        `distance(t) = sqrt((x(t)-x'(t))^2 + (y(t)-y'(t))^2 + (z(t)-z'(t))^2)`
 
-**重点分析：**
-- 不同方法的数值稳定性
-- 混沌轨道的保真度
-- 长时间积分的可靠性
+*   **任务 D (可选进阶): 数值方法初步比较**
+    1.  尝试使用 `solve_ivp` 中的不同数值方法（例如，除了默认的 `'RK45'`，尝试 `'Euler'`——需要自己实现或找到一个简单的实现，因为 `solve_ivp` 没有直接的固定步长欧拉法；或者比较 `'RK45'` 和 `'LSODA'` 在不同 `rtol`, `atol` 设置下的表现）。
+    2.  在较短的时间内（例如 $t \in$），比较不同方法或不同容差设置下得到的轨道是否有明显差异。思考为什么对于混沌系统，数值方法的选择和参数设置很重要。
 
-### 任务3：混沌行为分析
+**4. 提交内容建议 (根据实际教学安排调整)**
 
-实现函数 `analyze_chaos_behavior()`，分析洛伦兹系统的混沌特性：
-- 对初始条件的敏感依赖性
-- 李雅普诺夫指数估算
-- 轨道发散分析
+*   包含上述任务实现代码的Python脚本
+*   生成的洛伦兹吸引子3D图和初始条件敏感性对比图。
+*   对观察到的现象（吸引子形状、蝴蝶效应）进行简要的文字描述和解释。
 
-### 任务4：奇异吸引子可视化
+**5. 提示**
 
-实现函数 `plot_strange_attractor(x, y, z)`，绘制洛伦兹奇异吸引子：
-- 3D轨道图
-- 不同投影面的2D图
-- 庞加莱截面分析
+*   对于混沌系统，数值积分的步长（或 `solve_ivp` 中的 `rtol`, `atol` 容差参数）对结果的长期准确性有影响。对于 `t_eval` 的密集采样主要是为了绘图平滑。
+*   观察 $x(t)$, $y(t)$, $z(t)$ 的时间序列图，你会发现它们是非周期性的。
 
-### 任务5：参数空间探索
-
-实现函数 `explore_parameter_space()`，研究参数对系统行为的影响：
-- 不同r值下的系统行为
-- 从周期到混沌的转变
-- 分岔现象观察
-
-## 具体要求
-
-1. **标准参数：** $\sigma=10$, $r=28$, $b=\frac{8}{3}$
-2. **初始条件：** $(x_0, y_0, z_0) = (0, 1, 0)$
-3. **时间范围：** $t \in [0, 50]$
-4. **时间步长：** $dt = 0.001$（混沌系统需要较小步长）
-5. **敏感性测试：** 使用微小扰动的初始条件进行对比
-
-## 提示与资源
-
-### 1. 洛伦兹方程的物理背景
-- 原始方程来自简化的大气对流模型
-- $x$ 对应对流强度，$y$ 和 $z$ 对应温度分布
-- 参数 $\sigma$ 是普朗特数，$r$ 是瑞利数，$b$ 是几何因子
-
-### 2. 混沌系统的数值特点
-- 需要使用较小的时间步长保证精度
-- 长时间积分会累积误差
-- 不同数值方法可能给出不同的混沌轨道
-
-### 3. 关键现象观察
-- **蝴蝶效应：** 初始条件的微小差异导致轨道快速发散
-- **奇异吸引子：** 轨道被限制在有限区域内，但永不重复
-- **间歇性：** 系统在规则和混沌行为间切换
-
-### 4. 可视化技巧
-```python
-# 3D绘图示例
-from mpl_toolkits.mplot3d import Axes3D
-fig = plt.figure()
-ax = fig.add_subplot(111, projection='3d')
-ax.plot(x, y, z, linewidth=0.5)
-```
-
-### 5. 敏感性分析方法
-```python
-# 计算轨道间距离
-def trajectory_distance(x1, y1, z1, x2, y2, z2):
-    return np.sqrt((x1-x2)**2 + (y1-y2)**2 + (z1-z2)**2)
-```
-
-## 预期结果
-
-### 1. 时间序列特征
-- $y$ 随时间的变化显示不规则振荡
-- 无明显周期性，但有统计规律
-- 振幅在一定范围内变化
-
-### 2. 奇异吸引子形状
-- 经典的"蝴蝶"形状
-- 两个"翅膀"对应两个不稳定焦点
-- 轨道在两翅膀间不规则跳跃
-
-### 3. 混沌特征
-- 李雅普诺夫指数为正
-- 轨道发散呈指数增长
-- 功率谱连续且宽带
-
-### 4. 数值方法比较
-- RK4方法在长时间积分中最稳定
-- 欧拉法可能导致轨道发散
-- 步长对混沌轨道保真度影响显著
-
-## 扩展思考
-
-1. **实际应用：** 洛伦兹方程在气象预报、激光物理、化学反应等领域的应用
-2. **混沌控制：** 如何通过小扰动控制混沌系统
-3. **同步现象：** 两个耦合洛伦兹系统的同步行为
-4. **分数阶洛伦兹方程：** 记忆效应对混沌行为的影响
-
-## 评分标准
-
-- **基本实现（40分）：** 正确实现洛伦兹方程求解和基本可视化
-- **方法比较（25分）：** 完成数值方法比较和稳定性分析
-- **混沌分析（20分）：** 实现敏感性分析和混沌特征计算
-- **可视化质量（10分）：** 高质量的3D图形和多角度展示
-- **分析深度（5分）：** 深入的物理理解和现象解释
