--- a/project_4_harmonic_oscillator/实验报告模板.md
+++ b/project_4_harmonic_oscillator/实验报告模板.md
@@ -102,11 +102,8 @@
 1. 教材和参考书
 2. 相关论文或网络资源
 
-## 附录：核心代码
+## 附录：代码
 
-请附上实验中最关键的代码片段（限制在20行以内），例如：
-1. ODE函数的实现
-2. RK4方法的实现
-3. 周期分析的实现
-
-注意：代码需要包含必要的注释说明。
+```python
+# 在这里粘贴实验中使用的Python代码
+```   
