refactor(van_der_pol): 重构项目文件结构并更新求解方法
- 将原项目文件重命名为更清晰的命名结构
- 移除能量分析相关任务和文档内容
- 将RK4方法替换为solve_ivp求解器
- 添加完整的测试用例和参考实现
- 更新项目说明文档中的求解方法建议

重构目的是简化项目结构，使用更可靠的scipy求解器，并移除不核心的能量分析部分以聚焦于核心振动特性分析。

--- a/project_5_van_der_pol/实验报告模板.md
+++ b/project_5_van_der_pol/实验报告模板.md
@@ -70,24 +70,8 @@
 
 2. 分析数据趋势并解释物理原因
 
-### 3.3 能量分析
 
-#### 3.3.1 能量随时间的变化
-
-1. 插入系统能量随时间变化的图像
-2. 分析：
-   - 能量的耗散过程
-   - 能量的补充机制
-   - 稳态能量特征
-
-#### 3.3.2 能量平衡机制
-
-1. 分析非线性阻尼项的作用：
-   - 能量耗散区域
-   - 能量补充区域
-2. 解释稳态振荡的能量平衡原理
-
-### 3.4 初始条件的影响
+### 3.3 初始条件的影响
 
 1. 比较不同初始条件下的系统行为：
    - 轨迹的收敛性
@@ -105,12 +89,7 @@
    - 能量的平衡机制
    - 相空间轨迹的形状
 
-3. 数值计算中的关键问题：
-   - 时间步长的选择依据
-   - 数值稳定性的保证方法
-   - 计算精度的评估方法
-
-4. van der Pol振子模型在实际中的应用例子和局限性
+3. van der Pol振子模型在实际中的应用例子和局限性
 
 ## 5. 结论
 
@@ -120,18 +99,8 @@
 3. 极限环振荡的形成机制
 4. 数值方法的有效性评估
 
-## 6. 参考文献
+## 附录：代码
+```python
+# 请在此处粘贴代码
+```
 
-列出实验中参考的文献资料：
-1. 教材和参考书
-2. 相关论文或网络资源
-3. 数值方法参考资料
-
-## 附录：核心代码
-
-请附上实验中最关键的代码片段（限制在20行以内），例如：
-1. van der Pol方程的实现
-2. RK4方法的实现
-3. 极限环分析的实现
-
-注意：代码需要包含必要的注释说明。
