--- a/project_5_van_der_pol/项目说明.md
+++ b/project_5_van_der_pol/项目说明.md
@@ -29,7 +29,7 @@ van der Pol振子的运动方程为：
 ### 任务1：基本实现
 
 1. 将二阶van der Pol方程转化为一阶方程组
-2. 实现数值求解方法（建议使用RK4方法）
+2. 实现数值求解方法（建议使用solve_ivp方法）
 3. 设置基本参数：
    - $\omega = 1$
    - $\mu = 1$
@@ -50,16 +50,11 @@ van der Pol振子的运动方程为：
 ### 任务3：相空间分析
 
 1. 绘制相空间轨迹（ $\dot{x}$ vs $x$）
-2. 分析不同$\mu$值下的相空间特征：
+2. 分析不同 $\mu$值下的相空间特征：
    - 极限环的形状和大小
    - 轨迹的收敛性质
 3. 研究不同初始条件下的行为
 
-### 任务4：能量分析
-
-1. 计算系统的能量随时间的变化
-2. 分析能量的耗散和补充机制
-3. 研究系统达到稳态时的能量特征
 
 ## 实现要求
 
