--- a/project_3_forced_pendulum/项目说明.md
+++ b/project_3_forced_pendulum/项目说明.md
@@ -1,253 +1,87 @@
-# 项目3：受驱单摆的非线性动力学
+# 项目3：受迫单摆的动力学行为与共振现象研究
 
-## 项目概述
+## 1. 项目背景与简介
 
-本项目研究受外力驱动的非线性单摆系统，探索其丰富的动力学行为，包括周期运动、准周期运动、混沌运动和共振现象。通过数值求解和可视化分析，深入理解非线性振动系统的复杂性。
+单摆是最经典的物理系统之一。在理想情况下，其小角度摆动是简谐运动。然而，当单摆受到外部周期性驱动力时，其动力学行为会变得更加复杂和有趣。本项目旨在研究一个受到特定形式水平周期性振荡力作用的单摆。
 
-## 数学模型
+我们将通过数值方法求解其运动方程，观察摆角随时间的变化，并进一步探究系统在不同驱动频率下的响应，特别是寻找并分析共振现象，即当驱动力的频率与系统的某个“固有”特性相匹配时，摆动幅度达到最大的情况。
 
-### 受驱阻尼单摆方程
+## 2. 核心运动方程
 
-考虑受到周期外力驱动和阻尼作用的单摆，其运动方程为：
+单摆受到一个小的水平振荡力时，其摆角 $\theta$ (弧度) 随时间 $t$ (秒) 变化的运动方程为：
 
-$$d^2\theta/dt² + \gamma(d\theta/dt) + \omega_0^2\sin(\theta) = f_0\cos(\omega t)$$
-
+$$
+\frac{d^2\theta}{dt^2} = - \frac{g}{\ell}\sin\theta + C \cos\theta \sin(\Omega t)
+$$
 
 其中：
--  $\theta$：摆角（弧度）
--  $\gamma$：阻尼系数
--  $\omega_0$：固有频率 ( $\omega_0 =\sqrt{g/L}$)
--  $f_0$：驱动力幅度
--  $\omega$：驱动频率
--  $t$：时间
+-   $g$ 是重力加速度 (通常取 $9.81 \, \mathrm{m/s^2}$)。
+-   $\ell$ 是摆长 (单位：米)。
+-   $C$ 是与驱动力强度相关的常数 (单位：$\mathrm{s}^{-2}$)。
+-   $\Omega$ 是驱动力的角频率 (单位：$\mathrm{s}^{-1}$)。
 
-### 状态空间表示
+为了进行数值求解，需要将上述二阶常微分方程转换为一个**一阶常微分方程组**。
+令 $\omega = \frac{d\theta}{dt}$ (角速度)，则方程组为：
 
-将二阶微分方程转化为一阶方程组：
+1.  $\frac{d\theta}{dt} = \omega$
+2.  $\frac{d\omega}{dt} = - \frac{g}{\ell}\sin\theta + C \cos\theta \sin(\Omega t)$
 
-$$\begin{align*}
-d\theta/dt=\omega_θ\\
-dω_θ/dt=-\omega_0^2\sin(\theta) + f_0\cos(\omega t)
-\end{align*}$$
+状态向量可以表示为 $\mathbf{y} = [\theta, \omega]^T$。
 
+## 3. 项目任务与步骤
 
-状态向量：**y** = [θ, ω_θ]ᵀ
+### 任务 1: 特定参数下的数值解与可视化
 
-### 无量纲化
+1.  **实现方程求解函数：**
+    编写一个Python函数，该函数接收当前时间 `t`、状态向量 `state` ($[\theta, \omega]$) 以及参数 ($\ell, g, C, \Omega$)，并返回状态向量的导数 ($[d\theta/dt, d\omega/dt]$)。
+2.  **设置参数与初始条件：**
+    *   摆长 $\ell = 10 \, \mathrm{cm} = 0.1 \, \mathrm{m}$。
+    *   驱动力强度常数 $C = 2 \, \mathrm{s}^{-2}$。
+    *   驱动力角频率 $\Omega = 5 \, \mathrm{s}^{-1}$。
+    *   重力加速度 $g = 9.81 \, \mathrm{m/s^2}$。
+    *   初始条件 (在 $t=0$ 时)：$\theta(0) = 0$ (初始摆角为0)，$\omega(0) = \frac{d\theta}{dt}(0) = 0$ (初始角速度为0)。
+3.  **数值求解：**
+    使用 `scipy.integrate.solve_ivp` 求解上述一阶常微分方程组。
+    *   时间范围：从 $t=0$ 到 $t=100 \, \mathrm{s}$。
+    *   选择足够多的时间点进行评估 (例如，`t_eval = np.linspace(0, 100, 2000)`) 以便后续绘图。
+4.  **结果可视化：**
+    绘制摆角 $\theta(t)$ 随时间 $t$ 变化的曲线图。观察摆动行为。
 
-引入无量纲时间 τ = ω₀t，方程变为：
+### 任务 2: 探究共振现象
 
-```
-d²θ/dτ² + (γ/ω₀)(dθ/dτ) + sin(θ) = (f₀/ω₀²)cos((ω/ω₀)τ)
-```
+1.  **目标：** 保持参数 $C = 2 \, \mathrm{s}^{-2}$ 和 $\ell = 0.1 \, \mathrm{m}$ 不变，通过改变驱动力角频率 $\Omega$，找到使单摆稳态摆动幅度（例如，在一段时间后 $\theta(t)$ 的最大绝对值）最大的 $\Omega$ 值。这个 $\Omega$ 值即为系统的（近似）共振频率。
 
-定义无量纲参数：
-- β = γ/ω₀：无量纲阻尼系数
-- F = f₀/ω₀²：无量纲驱动力
-- Ω = ω/ω₀：频率比
+2.  **方法：**
+    *   选择一个合理的 $\Omega$ 值范围进行扫描。可以先估算小角度摆动下的自然频率 $\Omega_0 = \sqrt{g/\ell}$ 作为参考。例如，可以扫描 $\Omega$ 从 $\Omega_0/2$ 到 $2\Omega_0$ 的范围，或者更宽一些。
+    *   对于选定范围内的每一个 $\Omega$ 值：
+        *   使用与任务1相同的初始条件和求解方法，求解单摆的运动。建议模拟足够长的时间（例如 $t=0$ 到 $t=200 \, \mathrm{s}$ 或更长），以确保系统达到稳态响应或观察到足够多的摆动周期。
+        *   确定在该 $\Omega$ 值下，摆角 $\theta(t)$ 在稳态阶段（例如，忽略初始的一段暂态时间，比如 $t > 50 \, \mathrm{s}$ 之后）的最大振幅 $A = \max(|\theta(t)|_{\text{steady state}})$。
+    *   绘制最大振幅 $A$ 作为驱动力角频率 $\Omega$ 的函数的曲线图 (即 $A(\Omega)$ vs $\Omega$)。
+    *   从图中找到使振幅 $A$ 最大的 $\Omega_{res}$ 值。
 
-## 实验任务
+3.  **共振情况下的可视化：**
+    使用找到的共振频率 $\Omega_{res}$，以及 $C = 2 \, \mathrm{s}^{-2}$, $\ell = 0.1 \, \mathrm{m}$ 和相同的初始条件，重新求解单摆的运动。
+    绘制在此共振情况下，摆角 $\theta(t)$ 随时间 $t$ 变化的曲线图。
 
-### 任务1：数值方法实现与比较
+## 4. 提交内容建议
 
-**要求：**
-1. 实现欧拉法、改进欧拉法和4阶龙格-库塔法
-2. 求解受驱单摆方程组
-3. 比较三种方法在不同步长下的精度和稳定性
-4. 分析长时间积分的误差累积
+*   包含上述任务实现代码的forced_pendulum_student.py
+*   包含上述任务的报告，包括：
+*   **图表：**
+    *   任务1：$\theta(t)$ vs $t$ 的曲线图 (对于 $\Omega = 5 \, \mathrm{s}^{-1}$)。
+    *   任务2：最大稳态振幅 $A$ vs 驱动力角频率 $\Omega$ 的曲线图。
+    *   任务2：在找到的共振频率 $\Omega_{res}$ 下，$\theta(t)$ vs $t$ 的曲线图。
+*   **分析与讨论（简要）：**
+    *   描述在 $\Omega = 5 \, \mathrm{s}^{-1}$ 时单摆的运动特征。
+    *   报告找到的共振角频率 $\Omega_{res}$ 大约是多少。
+    *   比较共振时的摆动与非共振时的摆动有何显著不同。
+    *   （可选）将找到的共振频率与小角度近似下的自然频率 $\Omega_0 = \sqrt{g/\ell}$ 进行比较，并讨论可能的差异原因（如非线性项、驱动项的 $\cos\theta$ 因子等）。
 
-**参数设置：**
-- 基准参数：β = 0.5, F = 1.2, Ω = 2/3
-- 初始条件：θ(0) = 0.2, ω_θ(0) = 0
-- 时间范围：τ ∈ [0, 100]
-- 步长测试：dτ = 0.1, 0.05, 0.01, 0.005
+**5. 提示与建议**
 
-### 任务2：周期和准周期运动分析
+*   **单位：** 注意所有物理量的单位统一。摆长 $\ell$ 已从 cm 转换为 m。
+*   **数值求解器：** `scipy.integrate.solve_ivp` 是推荐的工具。注意其 `args` 参数用于传递额外的固定参数给你的ODE函数。
+*   **稳态振幅确定：** 在任务2中，为了确定稳态振幅，可能需要忽略求解初期的一段暂态过程。例如，只考虑 $t$ 大于某个值（如 $50s$ 或 $100s$）之后的数据来计算最大振幅。
+*   **$\cos\theta$ 因子：** 注意驱动力项中包含 $\cos\theta$，这意味着驱动力的实际“效用”也与摆角有关，这可能使共振行为比简单的线性受迫振动更复杂。
+*   **绘图：** 清晰的图表对于展示结果非常重要。确保坐标轴有标签和单位，图有标题。
 
-**要求：**
-1. 研究不同驱动参数下的运动模式
-2. 绘制相空间轨道图
-3. 分析庞加莱截面
-4. 识别周期轨道和准周期轨道
-
-**参数扫描：**
-- 固定 β = 0.5, Ω = 2/3，变化 F ∈ [0.5, 2.0]
-- 固定 β = 0.5, F = 1.2，变化 Ω ∈ [0.5, 1.5]
-
-### 任务3：共振现象研究
-
-**要求：**
-1. 研究线性共振和非线性共振
-2. 绘制幅频响应曲线
-3. 分析共振峰的位置和宽度
-4. 研究阻尼对共振的影响
-
-**分析内容：**
-- 主共振：Ω ≈ 1
-- 次谐波共振：Ω ≈ 3, 5, 7, ...
-- 超谐波共振：Ω ≈ 1/3, 1/5, 1/7, ...
-
-### 任务4：混沌行为分析
-
-**要求：**
-1. 寻找混沌参数区域
-2. 分析对初始条件的敏感依赖性
-3. 计算李雅普诺夫指数
-4. 研究通向混沌的路径
-
-**混沌参数：**
-- β = 0.5, F = 1.5, Ω = 2/3
-- β = 0.2, F = 1.8, Ω = 1.0
-
-### 任务5：参数空间探索
-
-**要求：**
-1. 构建参数空间的动力学相图
-2. 识别不同的动力学区域
-3. 分析分岔现象
-4. 研究参数变化对系统行为的影响
-
-**参数网格：**
-- F ∈ [0.5, 2.5]，分辨率：0.05
-- Ω ∈ [0.5, 1.5]，分辨率：0.02
-
-## 分析要求
-
-### 1. 数值方法性能分析
-
-**精度比较：**
-- 计算不同方法在相同步长下的全局误差
-- 分析误差随步长的变化规律
-- 比较计算效率（时间复杂度）
-
-**稳定性分析：**
-- 研究大步长下的数值稳定性
-- 分析能量守恒性质
-- 讨论长时间积分的可靠性
-
-### 2. 物理现象分析
-
-**运动分类：**
-- 周期运动：识别周期数和运动模式
-- 准周期运动：分析频率成分
-- 混沌运动：验证混沌特征
-
-**相空间分析：**
-- 绘制相轨道图
-- 分析吸引子结构
-- 研究相空间的几何特征
-
-### 3. 共振机制研究
-
-**线性化分析：**
-- 小振幅近似下的解析解
-- 共振频率的理论预测
-- 与数值结果的比较
-
-**非线性效应：**
-- 振幅对频率的影响
-- 跳跃现象和滞后效应
-- 多稳态共存
-
-## 可视化要求
-
-### 1. 时间序列图
-- θ(t) 和 ω_θ(t) 的时间演化
-- 不同参数下的对比
-- 周期性和混沌性的直观展示
-
-### 2. 相空间图
-- (θ, ω_θ) 相平面轨道
-- 不同初始条件的轨道族
-- 吸引子和排斥子的可视化
-
-### 3. 庞加莱截面
-- 固定相位的截面点
-- 周期点和混沌海的识别
-- 不变集合的结构
-
-### 4. 频谱分析
-- 功率谱密度图
-- 频率成分分析
-- 周期性和准周期性的判别
-
-### 5. 参数空间图
-- 动力学相图
-- 分岔图
-- 李雅普诺夫指数分布
-
-## 讨论问题
-
-### 1. 数值方法问题
-- 为什么高阶方法在非线性系统中更重要？
-- 如何选择合适的时间步长？
-- 长时间积分中如何控制误差累积？
-
-### 2. 物理机制问题
-- 非线性如何导致丰富的动力学行为？
-- 阻尼在系统中起什么作用？
-- 驱动力如何与固有振动耦合？
-
-### 3. 共振现象问题
-- 为什么会出现次谐波和超谐波共振？
-- 非线性共振与线性共振有何不同？
-- 如何利用共振现象？
-
-### 4. 混沌理论问题
-- 确定性系统如何产生随机行为？
-- 混沌的实用价值是什么？
-- 如何控制或利用混沌？
-
-## 扩展研究
-
-### 1. 多自由度系统
-- 双摆系统
-- 耦合振子
-- 连续系统的离散化
-
-### 2. 随机驱动
-- 噪声对动力学的影响
-- 随机共振现象
-- 噪声诱导的相变
-
-### 3. 控制问题
-- 混沌控制
-- 同步现象
-- 反馈控制策略
-
-## 评分标准
-
-### 代码实现 (40%)
-- 数值方法的正确实现
-- 代码结构和文档质量
-- 计算效率和稳定性
-
-### 数值分析 (30%)
-- 方法比较的深度
-- 误差分析的准确性
-- 参数研究的系统性
-
-### 物理理解 (20%)
-- 现象解释的正确性
-- 物理机制的理解
-- 理论与数值的结合
-
-### 报告质量 (10%)
-- 图表的清晰度
-- 结果讨论的深度
-- 报告的完整性
-
-## 提交要求
-
-1. **代码文件：** `project_3_student.py`（完整实现）
-2. **实验报告：** 详细的分析报告（PDF格式）
-3. **图片文件：** 所有分析图表
-4. **数据文件：** 关键数值结果（可选）
-
-## 截止日期
-
-请在规定时间内完成所有任务并提交完整材料。
-
----
-
-**注意：** 本项目涉及复杂的非线性动力学现象，建议分步骤完成，先掌握基本的数值方法，再逐步深入分析物理现象。遇到问题时，可以参考相关文献或寻求帮助。
